# ocelaudit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
.wash/: config.yaml
components/api-gateway/: Cargo.toml  wkg.toml
components/api-gateway/.wash/: config.yaml
components/api-gateway/src/: auth.rs  csl_client.rs  csl_fetch.rs  lib.rs  routes.rs  state.rs  static_assets.rs
components/api-gateway/wit/: world.wit
components/csl-ingest/: Cargo.toml
components/csl-ingest/src/: lib.rs  source_meta.rs
components/csl-service/: Cargo.toml  build.rs
components/csl-service/src/: bootstrap.rs  main.rs
components/search/: Cargo.toml
components/search/src/: engine.rs  lib.rs  model.rs  tlp.rs  tokenize.rs
components/search/tests/: query_suite.rs
components/storage-jsonfs/: Cargo.toml
components/storage-jsonfs/src/: config.rs  lib.rs  tests.rs
components/storage-memory/: Cargo.toml
components/storage-memory/src/: lib.rs
deploy/control/: httptrigger.yaml  ocelaudit.yaml
docs/: demo-script.md  m1-search-engine-decision.md  m14-tcp-service-benchmark.md  storage-backends.md
tests/api/: _lib.sh  _runner.sh  m0-hello.sh  m2-storage.sh  m3-csl.sh  m4-audit-metrics.sh  m4-auth.sh  m4-search.sh  m5-workflow.sh  m6-spa.sh  m9-branding.sh  m99-tags-stats.sh
tests/components/search-fixtures/: queries.json
tests/fixtures/csl/: sample.json
tools/: build-component.sh  build-wash.sh  demo-queries.sh  demo.sh  stats.sh  wash-version.txt
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  decision.ts  main.tsx  router.ts  theme.css
ui/src/components/: Tag.tsx
ui/src/pages/: Admin.tsx  Audit.tsx  CslStatus.tsx  Dashboard.tsx  Login.tsx  Review.tsx  Search.tsx
