[package]
name = "ocelaudit-storage-jsonfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "OcelAudit storage backend: JSON-on-disk over wasi:filesystem (M2 default per PLAN.md §1.3)."

[lib]
name = "ocelaudit_storage_jsonfs"
# Library crate. The api-gateway compiles this in-process for M2;
# inter-component WIT split is deferred until later milestones.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["std", "getrandom"] }
ocelaudit-search = { path = "../search" }
